# wg_client

./: README.md  pyproject.toml
wgrest/: api_config.py
wgrest/models/: Device.py  DeviceCreateOrUpdateRequest.py  DeviceOptions.py  DeviceOptionsUpdateRequest.py  Error.py  Peer.py  PeerCreateOrUpdateRequest.py  __init__.py
wgrest/services/: async_device_service.py  device_service.py
